--- a/src/App.scss
+++ b/src/App.scss
@@ -26,23 +26,31 @@ body {
 @media only screen and (max-width: 768px) {
   .App {
     grid-template-columns: repeat(1, 1fr);
+    padding: 8px;
+    gap: 8px;
   }
 }
 @media only screen and (min-width: 768px) {
   .App {
     grid-template-columns: repeat(1, 1fr);
+    padding: 16px;
+    gap: 16px;
   }
 }
 
 @media only screen and (min-width: 992px) {
   .App {
     grid-template-columns: repeat(1, 1fr);
+    padding: 32px;
+    gap: 32px;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .App {
     grid-template-columns: repeat(2, 1fr);
+    padding: 40px;
+    gap: 40px;
   }
 }
 
