--- a/src/components/UserCard/index.scss
+++ b/src/components/UserCard/index.scss
@@ -1,5 +1,7 @@
 .UserCard-content {
   background-color: #fff;
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 20px 0px 10px 50px;
@@ -7,6 +9,7 @@
   align-items: flex-start;
   justify-content: start;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
 }
 .UserCard-title-content {
   display: flex;
@@ -15,18 +18,19 @@
   padding-right: 5px;
 }
 .UserCard-stepper {
-  padding-right: 40px;
+  padding-right: 20px;
 }
 .UserCard-title {
   display: flex;
   column-gap: 10px;
   align-items: center;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .UserCard-title {
     flex-direction: column;
     row-gap: 5px;
     align-items: start;
+    margin-bottom: 10px;
   }
 }
 .UserCard-name {
@@ -42,6 +46,10 @@
 
 .UserCard-subTitle {
   display: flex;
+  align-items: center;
+}
+.UserCard-subTitle-dot {
+  flex-shrink: 0;
 }
 .UserCard-currentTitle {
   color: #161430;
